--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@folio/stripes-components": "^1.7.0",
+    "@folio/stripes-form": "^0.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^4.3.2",
