Add data files for identifier types, languages.
    Add select lists for picking identifier type, language.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "scripts": {
-    "lint": "eslint *.js lib settings || true"
+    "lint": "eslint *.js lib settings data || true"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
