--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "scripts": {
-    "lint": "eslint *.js lib settings data",
+    "lint": "eslint *.js lib settings edit data",
     "test": "echo 'placeholder. no tests implemented'" 
   },
   "devDependencies": {
