--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "route": "/instances",
     "hasSettings": false,
     "okapiInterfaces": { 
-      "inventory": "3.0"
+      "instance-storage": "3.0",
+      "identifier-types": "1.0",
+      "contributor-types": "1.0",
+      "creator-types": "1.0",
+      "instance-formats": "1.0",
+      "instance-types": "1.0",
+      "classification-types": "1.0"
     },
     "permissionSets": [
       {
