Roll back UIIN-30 until back-end ready.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "shelf-locations": "1.0",
       "identifier-types": "1.0",
       "contributor-types": "1.0",
-      "contributor-name-types": "1.0",
+      "creator-types": "1.0",
       "instance-formats": "1.0",
       "instance-types": "1.0",
       "classification-types": "1.0",
