Remove creator, change contributor. UIIN-30.

--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "route": "/inventory",
     "hasSettings": false,
     "okapiInterfaces": {
-      "inventory": "4.2",
-      "instance-storage": "3.0",
+      "inventory": "5.0",
+      "instance-storage": "5.0",
       "holdings-storage": "1.0",
-      "item-storage": "4.1",
+      "item-storage": "5.0",
       "loan-types": "2.0",
       "material-types": "2.0",
       "shelf-locations": "1.0",
       "identifier-types": "1.0",
       "contributor-types": "1.0",
-      "creator-types": "1.0",
+      "contributor-name-types": "1.0",
       "instance-formats": "1.0",
       "instance-types": "1.0",
       "classification-types": "1.0",
