--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "query-string": "^4.3.2",
     "react": "^15.4.2",
     "react-flexbox-grid": "^1.1.3",
+    "react-intl": "^2.3.0",
     "react-router-dom": "^4.0.0",
     "redux-form": "^6.1.1"
   },
