--- a/package.json
+++ b/package.json
@@ -78,13 +78,13 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
-    "react": "^15.4.2",
     "react-intl": "^2.3.0",
     "react-router-dom": "^4.0.0",
     "redux-form": "^7.0.3"
   },
   "peerDependencies": {
     "@folio/stripes-connect": "^3.1.0",
-    "@folio/stripes-core": "^2.7.0"
+    "@folio/stripes-core": "^2..0",
+    "react": "*"
   }
 }
