--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   },
   "peerDependencies": {
     "@folio/stripes-connect": "^3.1.0",
-    "@folio/stripes-core": "^2..0",
+    "@folio/stripes-core": "^2.7.0",
     "react": "*"
   }
 }
