--- a/package.json
+++ b/package.json
@@ -62,13 +62,8 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.16.0",
     "babel-register": "^6.18.0",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-import-resolver-webpack": "0.7.1",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.4.1",
+    "eslint": "^4.8.0",
+    "@folio/eslint-config-stripes": "^1.1.0",
     "webpack": "1.11.0"
   },
   "dependencies": {
