Fetch instances through mod-graphql. UIIN-75
  Not bound to any rendering yet.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@folio/stripes-components": "^2.0.0",
     "@folio/stripes-form": "^0.8.1",
     "@folio/stripes-smart-components": "^1.4.0",
+    "graphql-tag": "^2.5.0",
+    "react-apollo": "^2.0.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
