Implement app icons for instances, holdings, items. UIIN-49,50,51

--- a/package.json
+++ b/package.json
@@ -30,9 +30,14 @@
        "title": "Holding"
      },
      {
-       "name": "items",
+       "name": "item",
        "alt": "",
        "title": "Item"
+     },
+     {
+       "name": "instance",
+       "alt": "",
+       "title": "Instance"
      }
     ],
     "okapiInterfaces": {
