UIIN-102 Cannot enable ui-inventory

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "permissionSets": [
       {
         "permissionName": "module.inventory.enabled",
-        "displayName": "UI: Inventory module is enabled"
+        "displayName": "UI: Inventory module is enabled",
+        "visible": true
       }
     ],
     "translations": {
