Add subperms to make ui perm useful

--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
         "displayName": "Inventory: enable the app",
         "description": "Some subperms to support enabling the Inventory app",
         "subPermissions": [
-          "module.inventory.enabled"
+          "module.inventory.enabled",
+          "inventory-storage.all",
+          "inventory.all"
         ],
         "visible": true
       }
