--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
       "instance-formats": "1.0",
       "instance-types": "1.0",
       "classification-types": "1.0",
-      "platforms": "1.0"
+      "platforms": "1.0",
+      "users": "14.0"
     },
     "permissionSets": [
       {
