--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
       "platforms": "1.0",
       "users": "14.0",
       "location-units": "1.1",
-      "locations": "2.0"
+      "locations": "2.0",
+      "circulation": "3.0"
     },
     "permissionSets": [
       {
