--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
      }
     ],
     "okapiInterfaces": {
-      "inventory": "5.3",
+      "inventory": "5.0 6.0",
       "instance-storage": "4.2",
       "holdings-storage": "1.3",
       "item-storage": "5.3",
