--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "5.0 6.0",
+      "inventory": "6.1",
       "instance-storage": "4.2",
       "holdings-storage": "1.3",
       "item-storage": "5.3",
@@ -49,10 +49,10 @@
       "material-types": "2.0",
       "locations": "2.0",
       "identifier-types": "1.0",
-      "contributor-types": "1.0 2.0",
+      "contributor-types": "2.0",
       "contributor-name-types": "1.1",
-      "instance-types": "1.0 2.0",
-      "instance-formats": "1.0 2.0",
+      "instance-types": "2.0",
+      "instance-formats": "2.0",
       "classification-types": "1.0",
       "platforms": "1.0",
       "users": "15.0",
