--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/inventory",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Inventory manager",
   "repository": "folio-org/ui-inventory",
   "publishConfig": {
@@ -41,8 +41,8 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "6.1",
-      "instance-storage": "4.2",
+      "inventory": "6.3",
+      "instance-storage": "4.5",
       "holdings-storage": "1.3",
       "item-storage": "5.3",
       "loan-types": "2.0",
@@ -54,6 +54,7 @@
       "instance-types": "2.0",
       "instance-formats": "2.0",
       "classification-types": "1.0",
+      "instance-relationship-types": "1.0",
       "platforms": "1.0",
       "users": "15.0",
       "location-units": "1.1",
