--- a/package.json
+++ b/package.json
@@ -167,20 +167,22 @@
   },
   "scripts": {
     "start": "stripes serve",
-    "lint": "eslint *.js lib settings edit data test/ui-testing",
+    "lint": "eslint .",
     "test": "cd ../ui-testing; env FOLIO_UI_URL=http://localhost:3000 yarn test-module -o --run=inventory"
   },
   "devDependencies": {
-    "@folio/eslint-config-stripes": "^3.1.0",
-    "@folio/stripes-cli": "^1.3.0",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^8.2.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-2": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "eslint": "^4.8.0",
-    "webpack": "1.11.0"
+    "@folio/eslint-config-stripes": "^3.2.0",
+    "@folio/stripes-cli": "^1.4.0",
+    "@folio/stripes-connect": "^3.2.0",
+    "@folio/stripes-core": "^2.11.0",
+    "@folio/stripes-logger": "^0.0.2",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.5.0",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "webpack": "^4.10.2"
   },
   "dependencies": {
     "@folio/stripes-components": "^3.0.8",
