--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "6.3",
-      "instance-storage": "4.5",
+      "inventory": "6.4",
+      "instance-storage": "4.6",
       "holdings-storage": "1.3",
       "item-storage": "5.3",
       "loan-types": "2.0",
@@ -54,6 +54,10 @@
       "instance-types": "2.0",
       "instance-formats": "2.0",
       "classification-types": "1.0",
+      "statistical-code-types": "1.0",
+      "cataloging-levels": "1.0",
+      "modes-of-issuance": "1.0",
+      "instance-statuses": "1.0",
       "instance-relationship-types": "1.0",
       "platforms": "1.0",
       "users": "15.0",
