--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@folio/inventory",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Inventory manager",
   "repository": "folio-org/ui-inventory",
   "publishConfig": {
@@ -41,10 +41,10 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "6.4",
-      "instance-storage": "4.6",
-      "holdings-storage": "1.3",
-      "item-storage": "5.3",
+      "inventory": "6.4 7.0",
+      "instance-storage": "4.6 5.0",
+      "holdings-storage": "1.3 2.0",
+      "item-storage": "5.3 6.0",
       "loan-types": "2.0",
       "material-types": "2.0",
       "locations": "2.0",
@@ -61,7 +61,7 @@
       "platforms": "1.0",
       "users": "15.0",
       "location-units": "1.1",
-      "circulation": "3.0 4.0"
+      "circulation": "4.0"
     },
     "permissionSets": [
       {
