--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
+    "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
     "react-router-dom": "^4.0.0",
     "redux-form": "^7.0.3"
