--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "6.4 7.0",
-      "instance-storage": "4.6 5.0",
-      "holdings-storage": "1.3 2.0",
-      "item-storage": "5.3 6.0",
+      "inventory": "7.0",
+      "instance-storage": "5.0",
+      "holdings-storage": "2.0",
+      "item-storage": "6.0",
       "loan-types": "2.0",
       "material-types": "2.0",
       "locations": "2.0",
