--- a/package.json
+++ b/package.json
@@ -183,9 +183,7 @@
     "redux": "^4.0.0"
   },
   "dependencies": {
-    "@folio/stripes-components": "^3.1.0",
-    "@folio/stripes-form": "^1.0.0",
-    "@folio/stripes-smart-components": "^1.8.0",
+    "@folio/stripes": "^1.0.0",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
@@ -194,8 +192,11 @@
     "redux-form": "^7.0.3"
   },
   "peerDependencies": {
-    "@folio/stripes-connect": "^3.2.0",
-    "@folio/stripes-core": "^2.11.0",
+    "@folio/stripes-components": "*",
+    "@folio/stripes-form": "*",
+    "@folio/stripes-smart-components": "*",
+    "@folio/stripes-connect": "*",
+    "@folio/stripes-core": "*",
     "react": "*"
   }
 }
