Remove unnecessary stripesclirc file and karma config

--- a/package.json
+++ b/package.json
@@ -171,13 +171,15 @@
   },
   "devDependencies": {
     "@bigtest/interactor": "^0.7.0",
-    "@bigtest/react": "^0.1.2",
     "@bigtest/mirage": "^0.0.1",
     "@bigtest/mocha": "^0.5.1",
+    "@bigtest/react": "^0.1.2",
     "@folio/eslint-config-stripes": "^3.2.1",
     "@folio/stripes": "^1.0.0",
-    "@folio/stripes-cli": "^1.4.0",
+    "@folio/stripes-cli": "^1.5.0",
+    "@folio/stripes-core": "^2.15.4",
     "babel-eslint": "^9.0.0",
+    "babel-polyfill": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^5.5.0",
     "react": "^16.5.0",
