--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
       "platforms": "1.0",
       "users": "15.0",
       "location-units": "1.1",
-      "circulation": "4.0"
+      "circulation": "4.0 5.0"
     },
     "permissionSets": [
       {
