--- a/package.json
+++ b/package.json
@@ -177,6 +177,19 @@
           "settings.inventory.enabled"
         ],
         "visible": true
+      },
+      {
+        "permissionName": "ui-inventory.settings.call-number-types",
+        "displayName": "Settings (Inventory): Can create, edit and remove contributor types",
+        "subPermissions": [
+          "inventory-storage.call-number-types.collection.get",
+          "inventory-storage.call-number-types.item.delete",
+          "inventory-storage.call-number-types.item.get",
+          "inventory-storage.call-number-types.item.post",
+          "inventory-storage.call-number-types.item.put",
+          "settings.inventory.enabled"
+        ],
+        "visible": true
       }
     ],
     "translations": {
