Depend on `holdings-storage` 2.1 and new reference tables UIIN-390

--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     "okapiInterfaces": {
       "inventory": "7.0",
       "instance-storage": "5.0",
-      "holdings-storage": "2.0",
+      "holdings-storage": "2.1",
       "item-storage": "6.0",
       "loan-types": "2.0",
       "material-types": "2.0",
+      "item-note-types": "1.0",
       "locations": "3.0",
       "identifier-types": "1.0",
       "contributor-types": "2.0",
@@ -55,10 +56,17 @@
       "instance-formats": "2.0",
       "classification-types": "1.0",
       "statistical-code-types": "1.0",
+      "statistical-codes": "1.0",
       "modes-of-issuance": "1.0",
       "instance-statuses": "1.0",
       "instance-relationship-types": "1.0",
+      "alternative-title-types": "1.0",
+      "holdings-types": "1.0",
+      "call-number-types": "1.0",
+      "electronic-access-relationships": "1.0",
       "platforms": "1.0",
+      "ill-policies": "1.0",
+      "holdings-note-types": "1.0",
       "users": "15.0",
       "location-units": "1.1",
       "circulation": "4.0 5.0"
