--- a/package.json
+++ b/package.json
@@ -186,6 +186,19 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.settings.statistical-codes",
+        "displayName": "Settings (Inventory): Can create, edit and remove statistical codes",
+        "subPermissions": [
+          "inventory-storage.statistical-codes.collection.get",
+          "inventory-storage.statistical-codes.item.delete",
+          "inventory-storage.statistical-codes.item.get",
+          "inventory-storage.statistical-codes.item.post",
+          "inventory-storage.statistical-codes.item.put",
+          "settings.inventory.enabled"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.settings.alternative-title-types",
         "displayName": "Settings (Inventory): Can create, edit and remove alternative title types",
         "subPermissions": [
