Update dependencies on inventory APIs to latest.
  inventory 8.0
  instance-storage 6.0
  holdings-storage 3.0
  item-storage 7.0

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "7.0 8.0",
-      "instance-storage": "5.0 6.0",
-      "holdings-storage": "2.1 3.0",
-      "item-storage": "6.0 7.0",
+      "inventory": "8.0",
+      "instance-storage": "6.0",
+      "holdings-storage": "3.0",
+      "item-storage": "7.0",
       "loan-types": "2.0",
       "material-types": "2.0",
       "item-note-types": "1.0",
