Update circulation interface to 6.0

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
       "holdings-note-types": "1.0",
       "users": "15.0",
       "location-units": "1.1",
-      "circulation": "4.0 5.0"
+      "circulation": "4.0 5.0 6.0"
     },
     "permissionSets": [
       {
