--- a/package.json
+++ b/package.json
@@ -305,6 +305,7 @@
     "query-string": "^5.0.0",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
+    "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux-form": "^7.0.3"
   },
