--- a/package.json
+++ b/package.json
@@ -213,7 +213,7 @@
       },
       {
         "permissionName": "ui-inventory.settings.instance-types",
-        "displayName": "Settings (Inventory): Can create, edit and remove instance types",
+        "displayName": "Settings (Inventory): Can create, edit and remove locally defined resource types",
         "subPermissions": [
           "inventory-storage.instance-types.collection.get",
           "inventory-storage.instance-types.item.delete",
