--- a/package.json
+++ b/package.json
@@ -243,6 +243,19 @@
         "visible": true
       },
       {
+        "permissionName": "ui-inventory.settings.nature-of-content-terms",
+        "displayName": "Settings (Inventory): Can create, edit and remove locally defined content terms",
+        "subPermissions": [
+          "inventory-storage.nature-of-content-terms.collection.get",
+          "inventory-storage.nature-of-content-terms.item.delete",
+          "inventory-storage.nature-of-content-terms.item.get",
+          "inventory-storage.nature-of-content-terms.item.post",
+          "inventory-storage.nature-of-content-terms.item.put",
+          "settings.inventory.enabled"
+        ],
+        "visible": true
+      },
+      {
         "permissionName": "ui-inventory.settings.modes-of-issuance",
         "displayName": "Settings (Inventory): Can create, edit and remove locally defined modes of issuance",
         "subPermissions": [
