--- a/package.json
+++ b/package.json
@@ -41,25 +41,27 @@
       }
     ],
     "okapiInterfaces": {
-      "inventory": "8.0",
-      "instance-storage": "6.0",
+      "inventory": "9.0",
+      "instance-storage": "7.0",
       "holdings-storage": "3.0",
       "item-storage": "7.0",
       "loan-types": "2.0",
       "material-types": "2.0",
       "item-note-types": "1.0",
       "locations": "3.0",
-      "identifier-types": "1.0",
+      "identifier-types": "1.1",
       "contributor-types": "2.0",
-      "contributor-name-types": "1.1",
+      "contributor-name-types": "1.2",
       "instance-types": "2.0",
+      "nature-of-content-terms": "1.0",
       "instance-formats": "2.0",
-      "classification-types": "1.0",
+      "classification-types": "1.1",
       "statistical-code-types": "1.0",
       "statistical-codes": "1.0",
       "modes-of-issuance": "1.0",
       "instance-statuses": "1.0",
       "instance-relationship-types": "1.0",
+      "instance-note-types": "1.0",
       "alternative-title-types": "1.0",
       "holdings-types": "1.0",
       "call-number-types": "1.0",
