--- a/package.json
+++ b/package.json
@@ -394,9 +394,13 @@
   },
   "dependencies": {
     "@folio/react-intl-safe-html": "^1.0.2",
+    "final-form": "^4.18.2",
+    "final-form-arrays": "^3.0.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
+    "react-final-form": "^6.3.0",
+    "react-final-form-arrays": "^3.1.0",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
     "react-router": "^4.0.0",
