--- a/package.json
+++ b/package.json
@@ -397,6 +397,7 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "query-string": "^5.0.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-final-form": "^6.3.0",
     "react-final-form-arrays": "^3.1.0",
     "react-hot-loader": "^4.3.12",
