--- a/package.json
+++ b/package.json
@@ -400,6 +400,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-final-form": "^6.3.0",
     "react-final-form-arrays": "^3.1.0",
+    "react-final-form-listeners": "^1.0.2",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
     "react-router": "^4.0.0",
