--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
       "holdings-note-types": "1.0",
       "users": "15.0",
       "location-units": "1.1",
-      "circulation": "4.0 5.0 6.0 7.0"
+      "circulation": "4.0 5.0 6.0 7.0 8.0"
     },
     "permissionSets": [
       {
