--- a/package.json
+++ b/package.json
@@ -403,11 +403,12 @@
     "react-final-form-listeners": "^1.0.2",
     "react-hot-loader": "^4.3.12",
     "react-intl": "^2.3.0",
-    "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0"
+    "redux-form": "^7.0.3"
   },
   "peerDependencies": {
     "@folio/stripes": "^2.9.0",
-    "react": "*"
+    "react": "*",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   }
 }
